# 3W

./: .dockerignore  .gitignore  3W_DATASET_STRUCTURE.md  3W_TOOLKIT_CONTRIBUTING.md  3W_TOOLKIT_STRUCTURE.md  AmancioJSilvJr=Ceo_Petrobras  BACKLOG.md  CITATION.cff  CITATION.md  CITATIONS.md  CITE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Dockerfile  GIT_LFS.md  LICENSE  LICENSE.md  LISTS_OF_CITATIONS.md  LIST_OF_CITATIONS.md  README.md  Review strategy for virtual environment specification (environment.yml).txt  VERSIONING.md  docker-compose.yaml  dockerfile  environment.yml  individual_cla.md  init.sh  lychee.toml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  teste.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: action-black.yml  black.yml  publish.yml  tests.yml
3view/: main.py
3view/templates/: choose_file.html  dataset.html  index.html
ThreeWToolkit/: constants.py  pipeline.py
ThreeWToolkit/assessment/: __init__.py  assess_test_results.py  assess_training_results.py  assessment_visualizations.py  model_assess.py  training_assessment.py
ThreeWToolkit/core/: base_assessment.py  base_assessment_visualization.py  base_data_loader.py  base_data_visualization.py  base_dataset.py  base_feature_extractor.py  base_metrics.py  base_model_development.py  base_model_trainer.py  base_models.py  base_optim.py  base_preprocessing.py  base_step.py  base_time_series_holdout.py  enums.py
ThreeWToolkit/data_loader/: __init__.py  csv_data_loader.py  database_data_loader.py  hdf5_data_loader.py  json_data_loader.py  pickle_data_loader.py  threew_data_loader.py
ThreeWToolkit/data_visualization/: __init__.py  plot_correlation_heatmap.py  plot_fft.py  plot_multiple_series.py  plot_seasonal_decompose.py  plot_series.py  plot_statistical_features.py  plot_wavelet_spectrogram.py
ThreeWToolkit/dataset/: __init__.py  parquet_dataset.py
ThreeWToolkit/feature_extraction/: __init__.py  extract_autocorrelation.py  extract_exponential_statistics_features.py  extract_fourier_features.py  extract_shapelets.py  extract_statistical_features.py  extract_wavelet_features.py  tsfresh_features.py
ThreeWToolkit/holdout/: __init__.py  train_test_split.py
ThreeWToolkit/metrics/: __init__.py  _classification.py  _metrics_validators.py  _regression.py  accuracy.py  average_precision.py  balanced_accuracy.py  explained_variance.py  f1_score.py  homogeneity_score.py  neg_mean_absolute_error.py  neg_mean_squared_error.py  neg_root_mean_squared_error.py  precision.py  recall.py  roc_auc.py
ThreeWToolkit/models/: cnn_lstm.py  elasticnet.py  inception_time.py  lstm.py  mlp.py  sklearn_models.py  transformer.py
ThreeWToolkit/optim/: bayesian.py  genetic_algorithm.py  gradient_optimization.py  grid_search.py  random_search.py
ThreeWToolkit/preprocessing/: __init__.py  _data.py  _data_processing.py  _preprocessing_validators.py  detrend.py  impute_missing_data.py  impute_target_data.py  normalize.py  rename_columns.py  resample.py  smooth.py  windowing.py
ThreeWToolkit/reports/: report_generation.py
ThreeWToolkit/trainer/: trainer.py
ThreeWToolkit/trainers/: cnn_lstm.py  elasticnet.py  inception_time.py  lstm.py  sklearn_models.py  transformer.py
ThreeWToolkit/utils/: data_utils.py  downloader.py  general_utils.py  latex_manager.py  model_recorder.py  report_generation.py  template_manager.py  trainer_logger.py
clas/: corporate_cla.md  individual_cla.md
community/: README.md  citation_progress.py  citations.xlsx  gen_list_of_citations.py  gen_lists_of_citations.py
dataset/: README.md  dataset.ini
dataset/0/: WELL-00001_20170201010207.parquet  WELL-00001_20170201020207.csv  WELL-00001_20170201060114.parquet  WELL-00001_20170201070114.csv  WELL-00001_20170201110124.parquet  WELL-00001_20170201120124.csv  WELL-00001_20170201160311.parquet  WELL-00001_20170201170311.csv  WELL-00001_20170201210228.parquet  WELL-00001_20170201220228.csv  WELL-00001_20170202020343.parquet  WELL-00001_20170202030343.csv  WELL-00001_20170202070239.parquet  WELL-00001_20170202080239.csv  WELL-00001_20170218000146.parquet  WELL-00001_20170218010146.csv  WELL-00001_20170218050218.parquet  WELL-00001_20170218060218.csv  WELL-00001_20170218100218.parquet  WELL-00001_20170218110218.csv  WELL-00001_20170218150135.parquet  (+1170 more)
examples/: binary_classifier_of_spurious_closure_of_dhsv.ipynb  overview.ipynb
paper/: paper.bib  paper.md
src/: test.py
tests/: conftest.py  test_assessment.py  test_assessment_visualization.py  test_clustering_plots.py  test_dataset.py  test_distance_computer.py  test_downloader.py  test_epoch_strategy.py  test_example.py  test_extract_exponential_statistical_features.py  test_extract_statistical_features.py  test_extract_wavelet_features.py  test_fit_once_strategy.py  test_holdout.py  test_instance_quality_filter.py  test_latex_manager.py  test_load_instances_by_variable.py  test_load_model.py  test_metrics.py  test_mlp.py  test_model_assessment.py  test_pipeline.py  test_plot_correlation_heatmap.py  test_plot_multiple_series.py  test_plot_series.py  test_preprocessing.py  test_rename_columns.py  test_report_generation.py  test_save_best_model.py  test_sklearn_models.py  test_sklearn_prediction_strategy.py  test_template_manager.py  test_time_series_resampler.py  test_torch_prediction_strategy.py  test_trainer.py  test_trainer_logger.py
toolkit/: README.md  __init__.py  base.py  charts.py  dev.py  misc.py  rolling_window.py
toolkit_2.0.0/: .gitignore  README.md  pyproject.toml
(+3216 files in other folders)
