[project]
name = "ThreeWToolkit"
version = "0.0.1"
description = ""
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [
  { name = "Mathtzt", email = "matheus.santo@lps.ufrj.br" }
]
requires-python = "==3.10.11"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{ include = "ThreeWToolkit" }]

[tool.poetry.dependencies]
python = "==3.10.11"
numpy = "1.26.4"
scipy = "1.15.2"
pandas = "2.2.3"
scikit-learn = "1.6.1"
matplotlib = "3.10.1"
seaborn = "0.13.2"
plotly = "6.0.0"
coverage = "7.8.1"
imbalanced-learn = "0.13.0"
ipykernel = "6.29.5"
Pillow = "11.0.0"
scikit-image = "0.25.2"
torch = "2.7.0"
torchvision = "0.22.0"
torchmetrics = "1.6.2"
timm = "1.0.15"
tqdm = "4.67.1"
pytest = "8.3.5"
pydantic = "2.11"
mypy = "1.16.0"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
flake8 = "*"
jupyter = "*"
ruff = "*"
uv = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocstrings = { extras = ["python"], version = "*" }
sphinx = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["ThreeWToolkit"]
branch = true
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10.11"
mypy_path = "ThreeWToolkit"
ignore_missing_imports = true
